[gd_scene load_steps=37 format=3 uid="uid://btj3fpr6wqgic"]

[ext_resource type="PackedScene" uid="uid://boaoo3d7kojfm" path="res://maps/extras/height_map/height_map.tscn" id="1"]
[ext_resource type="Material" uid="uid://cjnvu5nldqqke" path="res://shaders/stylized_water/stylized_water_material.tres" id="2"]
[ext_resource type="Script" uid="uid://4n1s4ex0x7r1" path="res://maps/lake_map.gd" id="3"]
[ext_resource type="AudioStream" uid="uid://bf7qsavkux6xo" path="res://assets/water-pour.ogg" id="4"]
[ext_resource type="Texture2D" uid="uid://d1p8anhd3edlr" path="res://assets/minimap/maps/lake-map.png" id="4_l5twf"]
[ext_resource type="PackedScene" uid="uid://bb87xc3wgpnmr" path="res://maps/extras/boundary.tscn" id="5"]
[ext_resource type="Environment" uid="uid://d38p1lm0kuun7" path="res://default_env.tres" id="6"]
[ext_resource type="PackedScene" uid="uid://goxaxv03ucgy" path="res://entities/player/player.tscn" id="7"]
[ext_resource type="PackedScene" uid="uid://ccj15586diobm" path="res://ui/user_interface.tscn" id="8"]
[ext_resource type="PackedScene" uid="uid://d0skipybh0r4s" path="res://entities/enemy/blue_enemy/blue_enemy.tscn" id="9"]
[ext_resource type="PackedScene" uid="uid://dtl8a6yhn3qa8" path="res://props/ball/ball.tscn" id="10"]
[ext_resource type="PackedScene" uid="uid://dtsvkv0pyppjh" path="res://props/red_button/red_button.tscn" id="11"]
[ext_resource type="PackedScene" uid="uid://pjp410u41fqp" path="res://props/portal/portal.tscn" id="12"]
[ext_resource type="Material" path="res://maps/extras/height_map/Material.material" id="13"]
[ext_resource type="PackedScene" uid="uid://bwj1edhp5j7fw" path="res://props/godot_head/godot_head.tscn" id="14"]
[ext_resource type="AudioStream" uid="uid://c1y5qugat84ue" path="res://assets/house_in_a_forest_loop.ogg" id="15"]
[ext_resource type="PackedScene" uid="uid://cl7oilvypf1v2" path="res://props/purple_gem/purple_gem.tscn" id="16"]
[ext_resource type="PackedScene" uid="uid://c7wwx46ehiufd" path="res://props/red_gem/red_gem.tscn" id="17"]
[ext_resource type="PackedScene" uid="uid://dsi70335iix5i" path="res://props/green_gem/green_gem.tscn" id="18"]
[ext_resource type="PackedScene" uid="uid://dl4e5e40iodpb" path="res://maps/extras/pier/pier.tscn" id="19"]
[ext_resource type="Texture2D" uid="uid://c7rc5p0126d5f" path="res://particles/float/star_08.png" id="20"]
[ext_resource type="PackedScene" uid="uid://cxjpvcv7qi46v" path="res://props/checkpoint_flag/checkpoint_flag.tscn" id="21_gosh7"]
[ext_resource type="Script" uid="uid://biisxq3mem8ti" path="res://maps/minimap_camera.gd" id="22_se7s5"]

[sub_resource type="Curve3D" id="1"]
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, 14.082, 0, -0.909996, 0, 0, 0, 0, 0, 0, -10.7957, -7.62939e-06, 27.546, 0, 0, 0, 0, 0, 0, -22.403, -7.62939e-06, 53.9595, 0, 0, 0, 0, 0, 0, -6.018, 0, 58.69, 0, 0, 0, 0, 0, 0, 9.18201, 0, 33.39, 0, 0, 0, 0, 0, 0, 26.182, 0, 16.19, 0, 0, 0, 0, 0, 0, 35.882, 0, 6.49, 0, 0, 0, 0, 0, 0, 14.082, 0, -0.909996),
"tilts": PackedFloat32Array(0, 0, 0, 0, 0, 0, 0, 0)
}
point_count = 8

[sub_resource type="PlaneMesh" id="2"]
material = ExtResource("2")
size = Vector2(165, 165)

[sub_resource type="BoxShape3D" id="6"]
size = Vector3(160, 40, 163.2)

[sub_resource type="Animation" id="4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LakeWaterPlane:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(54.2274, -2.38324, 91.0514)]
}

[sub_resource type="Animation" id="3"]
resource_name = "drain_water"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LakeWaterPlane:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(54.2274, -2.38324, 91.0514), Vector3(54.227, -8, 91.051)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AudioStreamPlayer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 5),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [0.0],
"method": &"play"
}, {
"args": [],
"method": &"stop"
}]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("LakeWaterPlane")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("LakeWaterPlane/WaterBoundary:monitoring")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.8),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hf4yl"]
_data = {
&"RESET": SubResource("4"),
&"drain_water": SubResource("3")
}

[sub_resource type="CylinderShape3D" id="5"]
height = 5.0
radius = 5.0

[sub_resource type="StandardMaterial3D" id="7"]
transparency = 1
blend_mode = 1
shading_mode = 0
vertex_color_use_as_albedo = true
albedo_texture = ExtResource("20")
billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="ParticleProcessMaterial" id="8"]
emission_shape = 1
emission_sphere_radius = 3.0
gravity = Vector3(0, 0.5, 0)

[sub_resource type="QuadMesh" id="9"]
size = Vector2(3, 3)

[sub_resource type="BoxShape3D" id="10"]
size = Vector3(40, 20, 28)

[sub_resource type="BoxShape3D" id="11"]
size = Vector3(20, 36, 18)

[sub_resource type="BoxShape3D" id="12"]
size = Vector3(40, 1, 40)

[node name="LakeMap" type="Node3D"]
script = ExtResource("3")
map_music = ExtResource("15")
drain_water_sound = ExtResource("4")
minimap = ExtResource("4_l5twf")

[node name="Player" parent="." instance=ExtResource("7")]
transform = Transform3D(-0.707107, 0, -0.707107, 0, 1, 0, 0.707107, 0, -0.707107, 57.6636, 2.1881, 39.8077)

[node name="UserInterface" parent="." instance=ExtResource("8")]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource("6")

[node name="EnemySpawns" type="Node3D" parent="."]

[node name="BlueEnemyPath" type="Path3D" parent="EnemySpawns"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 96.018, 0, 77.11)
curve = SubResource("1")

[node name="PathFollow3D" type="PathFollow3D" parent="EnemySpawns/BlueEnemyPath"]
transform = Transform3D(-0.752857, -1.32854e-07, 0.658186, 0, 1, 2.0185e-07, -0.658186, 1.51964e-07, -0.752857, 14.082, 0, -0.909996)

[node name="BlueEnemy" parent="EnemySpawns/BlueEnemyPath/PathFollow3D" instance=ExtResource("9")]
affected_by_gravity = false

[node name="Props" type="Node3D" parent="."]

[node name="Ball" parent="Props" instance=ExtResource("10")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 174.437, 29.7845, 75.7972)

[node name="RedButton" parent="Props" instance=ExtResource("11")]
transform = Transform3D(0.766044, 0, -0.642788, 0, 1, 0, 0.642788, 0, 0.766044, 64.9038, -3.24139, 85.0633)

[node name="HeightMap" parent="." instance=ExtResource("1")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 66.935, 9.89507, 94.6744)

[node name="LakeWaterPlane" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 54.2274, -2.38324, 91.0514)
mesh = SubResource("2")

[node name="WaterBoundary" parent="LakeWaterPlane" instance=ExtResource("5")]
transform = Transform3D(0.160697, 0, 0.191511, 0, 0.25, 0, -0.191511, 0, 0.160697, 12, -1.46748, 0.5)

[node name="WaterArea" type="Area3D" parent="LakeWaterPlane"]
visible = false
collision_layer = 32
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="LakeWaterPlane/WaterArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -19.6, 0)
visible = false
shape = SubResource("6")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_hf4yl")
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4")
bus = &"Sound"

[node name="RetryCamera" type="Camera3D" parent="."]
transform = Transform3D(-0.707107, 0.0568076, -0.704821, 0, 0.996768, 0.0803381, 0.707107, 0.0568076, -0.704821, 8.32897, 44.3172, 8.32897)
far = 200.0

[node name="Boundary" parent="." instance=ExtResource("5")]
transform = Transform3D(15, 0, 0, 0, -15, -2.26494e-06, 0, 2.26494e-06, -15, 65, -60, 91)

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="."]
transform = Transform3D(-0.5, 0, -0.866025, 0, 1, 0, 0.866025, 0, -0.5, 55.2639, 3.8, 21.8429)
radius = 5.0
height = 5.0
material = ExtResource("13")

[node name="ExitPortal" parent="CSGCylinder3D" instance=ExtResource("12")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.52588e-05, 2.6, -0.00272751)
label = "Exit"
map_name = "hub_1"

[node name="StaticBody3D" type="StaticBody3D" parent="CSGCylinder3D"]
collision_layer = 4
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="CSGCylinder3D/StaticBody3D"]
shape = SubResource("5")

[node name="GodotHead" parent="." instance=ExtResource("14")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -43, 33.6, 116.8)

[node name="GodotHead2" parent="." instance=ExtResource("14")]
transform = Transform3D(0.984808, 0, -0.173648, 0, 1, 0, 0.173648, 0, 0.984808, 179.809, 33.6, 68.9833)

[node name="LakeGems" type="Node3D" parent="."]

[node name="RedGem" parent="LakeGems" instance=ExtResource("17")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 97.1, -5.5, 57.8)

[node name="RedGem2" parent="LakeGems" instance=ExtResource("17")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 50.7, -4.1, 119)

[node name="PurpleGem" parent="LakeGems" instance=ExtResource("16")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 102, -5.8, 51.8)

[node name="GreenGem" parent="LakeGems" instance=ExtResource("18")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 104, -5.8, 40.9)

[node name="GreenGem2" parent="LakeGems" instance=ExtResource("18")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 59.2, -3.2, 117.1)

[node name="GreenGem3" parent="LakeGems" instance=ExtResource("18")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 50.7, -3.2, 126.6)

[node name="GreenGem4" parent="LakeGems" instance=ExtResource("18")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 43.2, -3.2, 120.8)

[node name="GreenGem5" parent="LakeGems" instance=ExtResource("18")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 51.4, -3.2, 111)

[node name="Pier" parent="." instance=ExtResource("19")]
transform = Transform3D(-0.766044, 0, 0.642788, 0, 1, 0, -0.642788, 0, -0.766044, 55.2444, -4.9, 79.45)

[node name="Tunnel" type="Node3D" parent="."]

[node name="TunnelGodotHead" parent="Tunnel" instance=ExtResource("14")]
transform = Transform3D(-0.766044, 0, -0.642788, 0, 1, 0, 0.642788, 0, -0.766044, 23.3843, -33.6, 143.378)

[node name="PurpleGem" parent="Tunnel" instance=ExtResource("16")]
transform = Transform3D(-0.766044, 0, -0.642788, 0, 1, 0, 0.642788, 0, -0.766044, 34.1956, -37, 137.014)

[node name="PurpleGem2" parent="Tunnel" instance=ExtResource("16")]
transform = Transform3D(-0.766044, 0, -0.642788, 0, 1, 0, 0.642788, 0, -0.766044, 30.7422, -37, 132.784)

[node name="PurpleGem3" parent="Tunnel" instance=ExtResource("16")]
transform = Transform3D(-0.766044, 0, -0.642788, 0, 1, 0, 0.642788, 0, -0.766044, 29.182, -37, 142.396)

[node name="PurpleGem4" parent="Tunnel" instance=ExtResource("16")]
transform = Transform3D(-0.766044, 0, -0.642788, 0, 1, 0, 0.642788, 0, -0.766044, 25.0285, -37, 137.135)

[node name="RedGem" parent="Tunnel" instance=ExtResource("17")]
transform = Transform3D(-0.766044, 0, -0.642788, 0, 1, 0, 0.642788, 0, -0.766044, 41.6606, -37, 129.868)

[node name="RedGem2" parent="Tunnel" instance=ExtResource("17")]
transform = Transform3D(-0.766044, 0, -0.642788, 0, 1, 0, 0.642788, 0, -0.766044, 38.8967, -37, 126.574)

[node name="RedGem3" parent="Tunnel" instance=ExtResource("17")]
transform = Transform3D(-0.766044, 0, -0.642788, 0, 1, 0, 0.642788, 0, -0.766044, 38.725, -37, 132.592)

[node name="RedGem4" parent="Tunnel" instance=ExtResource("17")]
transform = Transform3D(-0.766044, 0, -0.642788, 0, 1, 0, 0.642788, 0, -0.766044, 35.8958, -36.8, 128.875)

[node name="GreenGem" parent="Tunnel" instance=ExtResource("18")]
transform = Transform3D(-0.766044, 0, -0.642788, 0, 1, 0, 0.642788, 0, -0.766044, 29.8644, -36.3, 156.204)

[node name="GreenGem2" parent="Tunnel" instance=ExtResource("18")]
transform = Transform3D(-0.766044, 0, -0.642788, 0, 1, 0, 0.642788, 0, -0.766044, 29.6354, -36.3, 149.086)

[node name="GreenGem3" parent="Tunnel" instance=ExtResource("18")]
transform = Transform3D(-0.766044, 0, -0.642788, 0, 1, 0, 0.642788, 0, -0.766044, 11.9949, -36.3, 134.908)

[node name="GreenGem4" parent="Tunnel" instance=ExtResource("18")]
transform = Transform3D(-0.766044, 0, -0.642788, 0, 1, 0, 0.642788, 0, -0.766044, 18.619, -36.3, 136.268)

[node name="TunnelFloatingParticles" type="GPUParticles3D" parent="Tunnel"]
unique_name_in_owner = true
transform = Transform3D(1.5, 0, -2.59808, 0, 3, 0, 2.59808, 0, 1.5, 52.1456, -32.6, 117.71)
material_override = SubResource("7")
emitting = false
amount = 20
lifetime = 10.0
speed_scale = 1.5
process_material = SubResource("8")
draw_pass_1 = SubResource("9")

[node name="AreaToStartParticles" type="Area3D" parent="Tunnel"]
transform = Transform3D(0.642788, 0, -0.766044, 0, 1, 0, 0.766044, 0, 0.642788, 26.6827, -30.5, 133.329)
collision_layer = 16
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="Tunnel/AreaToStartParticles"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.40001, 0, 3.3)
shape = SubResource("10")

[node name="AreaToMakePlayerFloat" type="Area3D" parent="Tunnel"]
transform = Transform3D(0.642788, 0, -0.766044, 0, 1, 0, 0.766044, 0, 0.642788, 52.152, -28.4, 117.405)
collision_layer = 16
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="Tunnel/AreaToMakePlayerFloat"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 9.4, 0)
shape = SubResource("11")

[node name="AreaToStopParticles" type="Area3D" parent="Tunnel"]
transform = Transform3D(0.642788, 0, -0.766044, 0, 1, 0, 0.766044, 0, 0.642788, 56.8691, 5.1, 115.785)
collision_layer = 16
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="Tunnel/AreaToStopParticles"]
transform = Transform3D(1, 0, 2.98023e-08, 0, 1, 0, -2.98023e-08, 0, 1, -2.6, -8.1, 6)
shape = SubResource("12")

[node name="Flag" parent="." instance=ExtResource("21_gosh7")]
transform = Transform3D(0.866025, 0, -0.5, 0, 1, 0, 0.5, 0, 0.866025, 22.2, 2.7, 73.2)

[node name="MinimapCamera" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 435, 0)
visible = false
projection = 1
size = 750.0
script = ExtResource("22_se7s5")
save_to = "res://assets/minimap/maps/lake-map.png"

[connection signal="hit" from="Player" to="." method="_on_Player_hit"]
[connection signal="pressed" from="Props/RedButton" to="." method="_on_RedButton_pressed"]
[connection signal="body_entered" from="Tunnel/AreaToStartParticles" to="." method="_on_AreaToStartParticles_body_entered"]
[connection signal="body_entered" from="Tunnel/AreaToMakePlayerFloat" to="." method="_on_AreaToMakePlayerFloat_body_entered"]
[connection signal="body_exited" from="Tunnel/AreaToMakePlayerFloat" to="." method="_on_AreaToMakePlayerFloat_body_exited"]
[connection signal="body_entered" from="Tunnel/AreaToStopParticles" to="." method="_on_AreaToStopParticles_body_entered"]
[connection signal="body_exited" from="Tunnel/AreaToStopParticles" to="." method="_on_AreaToStopParticles_body_exited"]
